# QWOPDeepLearning

./: .gitignore  README.md  pyproject.toml
notebooks/: training.ipynb
qwop_agent/: agent.py  environment.py  main.py
