[project]
name = "QWOPDeepLearning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BryceDouglasJames"},
]
dependencies = [
    "selenium>=4.19.0",
    "pytesseract>=0.3.10",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python3 ./qwop_agent/main.py"
